<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/movie_list_back">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="8dp">

            <ImageView
                android:id="@+id/mask"
                android:layout_width="match_parent"
                android:layout_height="560dp"
                android:alpha="0.3"
                android:contentDescription="@string/film_poster"
                android:scaleType="fitXY"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@drawable/mask" />

            <TextView
                android:id="@+id/movie_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/roboto_bold"
                android:textColor="@color/textColorWhite"
                android:textFontWeight="900"
                android:textSize="40sp"
                android:textStyle="normal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/mask"
                tools:targetApi="p"
                tools:text="@string/avengers_end_game_title" />

            <TextView
                android:id="@+id/movie_genres"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="16dp"
                android:textColor="@color/textColorRed"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/movie_title"
                tools:text="@string/action_adventure_fantasy_genre" />

            <ImageView
                android:id="@+id/black_rectangle"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="16dp"
                android:src="@drawable/rectangle"
                app:layout_constraintBottom_toBottomOf="@id/mask"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/age_rating"
                android:layout_width="24dp"
                android:layout_height="16dp"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:fontFamily="@font/roboto_bold"
                android:textColor="@color/textColorWhite"
                android:textFontWeight="900"
                android:textSize="12sp"
                android:textStyle="normal"
                app:layout_constraintBottom_toBottomOf="@+id/black_rectangle"
                app:layout_constraintEnd_toEndOf="@+id/black_rectangle"
                app:layout_constraintStart_toStartOf="@+id/black_rectangle"
                app:layout_constraintTop_toTopOf="@+id/black_rectangle"
                tools:targetApi="p"
                tools:text="@string/age_rating_13" />

            <TextView
                android:id="@+id/reviews_count"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_marginStart="8dp"
                android:layout_marginBottom="17dp"
                android:fontFamily="@font/roboto_bold"
                android:textColor="#FF3466"
                android:textFontWeight="900"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="@id/mask"
                app:layout_constraintStart_toEndOf="@id/age_rating"
                tools:targetApi="p"
                tools:text="@string/reviews_number" />

            <TextView
                android:id="@+id/storyline_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/storyline_raw"
                android:textColor="@color/textColorGray"
                android:textFontWeight="900"
                android:textSize="14sp"
                android:textStyle="normal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/movie_genres"
                tools:targetApi="p" />

            <TextView
                android:id="@+id/storyline_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/roboto_thin"
                android:textColor="@color/textColorGray"
                android:textFontWeight="600"
                android:textSize="14sp"
                android:textStyle="normal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/storyline_title"
                tools:targetApi="p"
                tools:text="@string/avengers_storyline" />

            <TextView
                android:id="@+id/footage_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="116dp"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/movie_footage"
                android:textColor="@color/textColorGray"
                android:textFontWeight="900"
                android:textSize="14sp"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/storyline_tv"
                tools:targetApi="p" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/footage_list_rv"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/footage_title" />

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="parent"
                app:layout_constraintVertical_bias="0.45"
                tools:visibility="visible" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/back_button_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="48dp"
        android:clickable="true"
        android:contentDescription="@string/back_button_text"
        android:elevation="8dp"
        android:focusable="true"
        app:backgroundTint="@color/white"
        app:fabSize="normal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:rippleColor="@color/textColorRed"
        app:srcCompat="@drawable/baseline_arrow_back_24" />
</RelativeLayout>

