<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="170dp"
    android:layout_height="296dp"
    android:layout_marginStart="6dp"
    android:layout_marginTop="12dp"
    android:layout_marginEnd="6dp"
    android:background="@drawable/card_bg">

    <ImageView
        android:id="@+id/movie_preview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="2dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="48dp"
        android:adjustViewBounds="true"
        android:foreground="@drawable/gradient"
        android:scaleType="fitXY"
        android:src="@drawable/avengers_small"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/year_mask"
        android:layout_width="50dp"
        android:layout_height="20dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="14dp"
        android:contentDescription="@string/film_year"
        android:scaleType="fitXY"
        android:src="@drawable/rectangle"
        android:alpha="0.75"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/year_text"
        android:layout_width="50dp"
        android:layout_height="20dp"
        app:layout_constraintTop_toTopOf="@id/year_mask"
        app:layout_constraintStart_toStartOf="@id/year_mask"
        android:fontFamily="@font/roboto_medium"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:textAlignment="center"
        tools:text="2023"/>

    <ImageView
        android:id="@+id/like"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:src="@drawable/like"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/card_name"
        style="@style/card_movie_name"
        android:layout_width="0dp"
        android:layout_height="20dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="20dp"
        android:gravity="center_vertical"
        android:lineSpacingExtra="4sp"
        android:text="@string/avengers_end_game_title_movie_card"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/movie_preview" />

    <TextView
        android:id="@+id/minutes"
        style="@style/minutes"
        android:layout_width="0dp"
        android:layout_height="12dp"
        android:text="@string/_137_min"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/card_name"
        app:layout_constraintTop_toBottomOf="@id/card_name" />

    <RatingBar
        android:id="@+id/ratingBar"
        style="@style/customRatingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:rating="4"
        app:layout_constraintBottom_toBottomOf="@id/movie_preview"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/reviews"
        style="@style/reviews"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/_125_reviews"
        app:layout_constraintBottom_toBottomOf="@id/ratingBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/ratingBar"
        app:layout_constraintTop_toTopOf="@id/ratingBar" />

    <TextView
        android:id="@+id/tagLine"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="16dp"
        android:text="@string/action_adventure_fantasy_genre"
        android:textAppearance="@style/tag"
        app:layout_constraintBottom_toTopOf="@id/ratingBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/movieClick"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@id/minutes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>